# coyote

./: Cargo.toml  readme.md
coyote-webs/: Cargo.toml
coyote-webs/pkg/: coyote_web.js  coyote_web_bg.wasm  package.json
coyote-webs/src/: lib.rs
coyote-webs/static/: index.css  index.html  package.json  wasm.js  wasm_bg.wasm
src/: jsonfile.rs  main.rs  matrix.rs
