[package]
name = "matrix"
version = "0.1.0"
authors = ["antash <mishraantash34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.18"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.114"
rusqlite = "0.23.1"
reqwest =  {version = "0.10.6", features = ["blocking", "json"]}
openssl = { version = "0.10.30", features = ["vendored"] }
tokio = { version = "0.2.21", features = ["macros"] }
anyhow = "1.0.31"
clap = "2.33.1"
url = "2.1.1"
