[package]
name = "coyote-web"
version = "0.1.0"
authors = ["antash <mishraantash34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17.3"
wasm-bindgen = "0.2.67"

[lib]
crate-type = ["cdylib", "rlib"]